change wording for freeshard adaptation

--- a/apps/actual/app_meta.json
+++ b/apps/actual/app_meta.json
@@ -26,7 +26,7 @@
       "Enjoy managing your finances",
       "Actual is a super fast privacy-focused app for managing your finances. You own your data, and we will sync it across all devices with optional end-to-end encryption."
     ],
-    "hint": "The app prompts you to set a password on first launch. You can choose a simple one, Portal secures the app separately.",
+    "hint": "The app prompts you to set a password on first launch. You can choose a simple one, your shard secures the app separately.",
     "is_featured": true
   }
 }
