--- a/apps/drawio/app_meta.json
+++ b/apps/drawio/app_meta.json
@@ -28,7 +28,7 @@
       "You can use it as a flowchart maker, network diagram software, to create UML online, as an ER diagram tool, to design database schema, to build BPMN online, as a circuit diagram maker, and more. diagrams.net can import .vsdx, Gliffy™ and Lucidchart™ files."
     ],
     "hint": [
-      "Diagrams cannot be stored on Portal, only on your local drive."
+      "Diagrams cannot be stored on your shard, only on your local drive."
     ]
   }
 }
