reduce min size for immich to s

--- a/apps/immich/app_meta.json
+++ b/apps/immich/app_meta.json
@@ -16,7 +16,7 @@
       "access": "public"
     }
   },
-  "minimum_portal_size": "m",
+  "minimum_portal_size": "s",
   "lifecycle": {
     "always_on": false,
     "idle_time_for_shutdown": 3600
